<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="173dp"
        android:layout_height="78dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tv_email"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/Email"/>

</LinearLayout>