<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        app:cardCornerRadius="7dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        app:cardElevation="22dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parent_contstraint_layout"
            android:orientation="vertical">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/img_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login_head"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top|center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/expense_tracker"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_icon"
                app:layout_constraintBottom_toTopOf="@+id/layout_login_fields"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/layout_login_fields"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_head">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/Email"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:cursorVisible="true"
                        android:gravity="center|start|bottom"
                        android:maxLength="50"
                        android:textColor="@color/black_effective"
                         />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:textColorHint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:gravity="center|start|bottom"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:textColor="@color/black_effective"
                         />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/login_biometric_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/enable_biometric"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_login_btn"
                        style="@style/Button.Primary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/login_caps"
                        android:textAllCaps="true"
                        android:imeOptions="flagNoExtractUi"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_signup_btn"
                        style="@style/Button.Primary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textAllCaps="true"
                         />
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_finger_print"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Button.Primary"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:enabled="false"
                        android:background="@drawable/rounded_background"
                        android:visibility="gone"
                        />
                </LinearLayout>





            </LinearLayout>
        </LinearLayout>
        </ScrollView>






    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
