<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:nestedScrollingEnabled="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="7dp"
        android:isScrollContainer="true"
        android:layout_gravity="center_vertical"
        app:cardElevation="22dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/img_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login_head"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_head">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:textColorHint="@color/gray"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_name"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border_bottom"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_email"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border_bottom"

                        android:cursorVisible="true"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border_bottom"

                        android:hint="@string/Password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_confirm_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border_bottom"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_currency_head1"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_currency"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                    android:visibility="gone"

                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_currency_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:visibility="invisible"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_border_bottom"
                            android:hint="@string/select_currency"
                            android:text=" "
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/signup_currency"
                        style="@style/TextAppearance.Text.DropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signup_back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/back"
                        style="@style/Button.Primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:visibility="gone"
                        android:textIsSelectable="true"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signup_save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sign_up"
                        android:layout_margin="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/Button.Primary"
                        app:layout_constraintStart_toEndOf="@+id/signup_back_btn" />
                </LinearLayout>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
